# natural_language_base_file_finder_in_terminal

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  ENVIRONMENT.md  FIXES_APPLIED.md  INFO_FIXES_APPLIED.md  LICENSE  LOW_FIXES_APPLIED.md  README.md  REMAINING_ISSUES.md  SECURITY.md  environment.yml  pyproject.toml  requirements.txt
.githooks/: pre-commit  run-tests.sh
.github/workflows/: ci.yml  release.yml
docs/: BENCHMARK_SCENARIOS.md  FUTURE_DEVELOPMENT.md  PROJECT_SUMMARY.md  RELEASE_CHECKLIST.md  benchmark-baseline-2026-02-28.md  benchmark-baseline-2026-03-02.md  session-2026-02-02-progress.md
docs/benchmarks/2026-02-28/: s1_compare.json  s1_workers1.csv  s1_workers1.json  s1_workers4.csv  s1_workers4.json  s2_compare.json  s2_workers1.csv  s2_workers1.json  s2_workers4.csv  s2_workers4.json  s3_compare.json  s3_workers1.csv  s3_workers1.json  s3_workers4.csv  s3_workers4.json  s4_compare.json  s4_workers1.csv  s4_workers1.json  s4_workers4.csv  s4_workers4.json
docs/benchmarks/2026-03-02/: s1_compare.json  s1_workers1.csv  s1_workers1.json  s1_workers4.csv  s1_workers4.json  s2_compare.json  s2_workers1.csv  s2_workers1.json  s2_workers4.csv  s2_workers4.json  s3_compare.json  s3_workers1.csv  s3_workers1.json  s3_workers4.csv  s3_workers4.json  s4_compare.json  s4_workers1.csv  s4_workers1.json  s4_workers4.csv  s4_workers4.json
docs/plans/: 2026-02-02-askfind-design.md  2026-02-02-askfind-implementation.md  2026-02-04-askfind-doc-updates.md  2026-02-04-askfind-filter-hardening.md  2026-02-04-askfind-followup-1-4.md  2026-02-04-askfind-followup-2-3-4-5.md  2026-02-04-askfind-followup-2-5.md  2026-02-04-askfind-followup-top3.md  2026-02-04-askfind-interactive-enhancements.md
scripts/bench/: benchmark_llm_modes.py  benchmark_walk.py  compare_benchmark_results.py  generate_synth_dataset.sh
scripts/ci/: benchmark_regression_gate.py  check_dev_tool_pins.py  index_query_regression_gate.py  pip_audit_gate.py
src/askfind/: __init__.py  cli.py  config.py  config_reader.py  logging_config.py  query_processor.py
src/askfind.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/askfind/interactive/: __init__.py  commands.py  pane.py  session.py
src/askfind/llm/: __init__.py  client.py  fallback.py  mode.py  parser.py  prompt.py
src/askfind/output/: __init__.py  formatter.py
src/askfind/search/: __init__.py  cache.py  filters.py  index.py  reranker.py  walker.py
tests/: test_benchmark_llm_modes_script.py  test_benchmark_regression_gate.py  test_benchmark_walk_script.py  test_check_dev_tool_pins.py  test_cli.py  test_client.py  test_commands.py  test_compare_benchmark_results.py  test_config.py  test_config_reader.py  test_fallback_parser.py  test_filters.py  test_formatter.py  test_index.py  test_index_query_regression_gate.py  test_llm_mode.py  test_llm_parser.py  test_logging_config.py  test_pane.py  test_pip_audit_gate.py  test_query_processor.py  test_reranker.py  test_search_cache.py  test_session.py  test_walker.py
tests/fixtures/: llm_mode_auto_golden.json
