[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "askfind"
version = "0.1.13"
description = "Natural language file finder for the terminal"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["cli", "search", "files", "llm", "natural-language"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
    "Typing :: Typed",
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "rich>=13.0",
    "prompt-toolkit>=3.0",
    "keyring>=25.0",
    "tomli-w>=1.0",
]

[project.urls]
Homepage = "https://github.com/wgsim/natural_language_base_file_finder_in_terminal"
Repository = "https://github.com/wgsim/natural_language_base_file_finder_in_terminal"
Issues = "https://github.com/wgsim/natural_language_base_file_finder_in_terminal/issues"
Changelog = "https://github.com/wgsim/natural_language_base_file_finder_in_terminal/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "mypy==1.11.2",
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "ruff==0.6.9",
    "pip-audit==2.10.0",
]

[project.scripts]
askfind = "askfind.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
askfind = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["F"]

[tool.mypy]
files = ["src"]
python_version = "3.12"
strict = true
warn_unused_configs = true
